// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h3 emotion-2"
    >
      This is a title
    </h1>
    <p
      class="MuiTypography-root MuiTypography-h6 emotion-3"
    >
      This is a lead
    </p>
  </div>
</DocumentFragment>
`;

exports[`Title Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h3 emotion-2"
    >
      This is a title
    </h1>
    <p
      class="MuiTypography-root MuiTypography-h6 emotion-3"
    >
      This is a lead
    </p>
  </div>
</DocumentFragment>
`;

exports[`Title Block should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h3 emotion-2"
    >
      This is a title
    </h1>
    <p
      class="MuiTypography-root MuiTypography-h6 emotion-3"
    >
      This is a lead
    </p>
  </div>
</DocumentFragment>
`;

exports[`Title Block should render WithoutLead 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h3 emotion-2"
    >
      This is a title
    </h1>
  </div>
</DocumentFragment>
`;
